test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require
   Compiling library std (sway-lib-std)
   Compiling script attribute_require (test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require)
warning: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:27:8
   |
...
27 | struct MyStructOnlyWarning {
   |        ------------------- `MyStructOnlyWarning` is not trivially decodable.
   |        ------------------- help: Consider changing `MyStructOnlyWarning` to make it trivially decodable.
28 |     #[allow(dead_code)]
29 |     a: u32
   |     - info: This field is not trivially decodable.
   |        --- help: Consider changing this type to `u64`.
   |
   = help: `u32` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:4:8
   |
...
 4 | struct MyStruct {
   |        ^^^^^^^^ `MyStruct` is not trivially decodable.
   |        -------- help: Consider changing `MyStruct` to make it trivially decodable.
 5 |     f0: bool,
   |     -- info: This field is not trivially decodable.
   |         ---- help: Consider changing this type to `TrivialBool`.
 6 |     f1: u8,
 7 |     f2: u16,
   |     -- info: This field is not trivially decodable.
   |         --- help: Consider changing this type to `u64`.
 8 |     f3: u32,
   |     -- info: This field is not trivially decodable.
   |         --- help: Consider changing this type to `u64`.
...
13 |     f8: NonTrivialStruct,
   |     -- info: This field is not trivially decodable.
14 |     f9: SomeEnum,
   |     -- info: This field is not trivially decodable.
   |         -------- help: Consider wrapping this type like `TrivialEnum<SomeEnum>`.
15 | 
16 |     f11: Vec<Vec<(u64, u64)>>,
   |     --- info: This field is not trivially decodable.
   |          -------------------- help: This type is never trivially decodable. Consider using `TrivialVec<TrivialVec<(u64, u64), MAX_LEN>, MAX_LEN>` instead.
17 |     f12: Result<Vec<u64>, u64>,
   |     --- info: This field is not trivially decodable.
   |          --------------------- help: Consider wrapping this type like `TrivialEnum<Result<Vec<u64>, u64>>`.
18 |     f13: Result<u64, u64>,
   |     --- info: This field is not trivially decodable.
   |          ---------------- help: Consider wrapping this type like `TrivialEnum<Result<u64, u64>>`.
19 | 
20 |     f14: (u64, NonTrivialStruct),
   |     --- info: This field is not trivially decodable.
21 |     f15: [NonTrivialStruct; 1],
   |     --- info: This field is not trivially decodable.
22 |     f16: [(u64, NonTrivialStruct); 2],
   |     --- info: This field is not trivially decodable.
   |
   = help: Enums are represented as tagged unions and because of that they cannot be trivially decoded. But where needed, they can be wrapped by `TrivialEnum`, and their original value can be retrieved later with `unwrap`.
   = help: `bool`, `u16`, `u32` are never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:42:8
   |
...
42 | struct NonTrivialStruct {
   |        ^^^^^^^^^^^^^^^^ `NonTrivialStruct` is not trivially decodable.
   |        ---------------- help: Consider changing `NonTrivialStruct` to make it trivially decodable.
43 |     pub a: bool,
   |         - info: This field is not trivially decodable.
   |            ---- help: Consider changing this type to `TrivialBool`.
44 | }
45 | 
46 | enum SomeEnum {
47 |     A: ()
...
51 |     #[require(trivially_decodable = "yes")]
52 |     fn some_fn_1(a: NonTrivialStruct, b: SomeEnum) -> SomeEnum;
   |                     ---------------- info: This is the reason `NonTrivialStruct` is being checked
   |
   = help: `bool` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:46:6
   |
...
46 | enum SomeEnum {
   |      ^^^^^^^^ `SomeEnum` is not trivially decodable.
...
52 |     fn some_fn_1(a: NonTrivialStruct, b: SomeEnum) -> SomeEnum;
   |                                          -------- info: This is the reason `SomeEnum` is being checked
   |                                          -------- help: Consider wrapping this type like `TrivialEnum<SomeEnum>`.
   |
   = help: Enums are represented as tagged unions and because of that they cannot be trivially decoded. But where needed, they can be wrapped by `TrivialEnum`, and their original value can be retrieved later with `unwrap`.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:46:6
   |
...
46 | enum SomeEnum {
   |      ^^^^^^^^ `SomeEnum` is not trivially decodable.
...
52 |     fn some_fn_1(a: NonTrivialStruct, b: SomeEnum) -> SomeEnum;
   |                                                       -------- info: This is the reason `SomeEnum` is being checked
   |                                                       -------- help: Consider wrapping this type like `TrivialEnum<SomeEnum>`.
   |
   = help: Enums are represented as tagged unions and because of that they cannot be trivially decoded. But where needed, they can be wrapped by `TrivialEnum`, and their original value can be retrieved later with `unwrap`.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:55:21
   |
...
55 |     fn some_fn_2(a: u32, b: u16, c: u8, d: bool);
   |                     ^^^ `u32` is not trivially decodable.
   |                     --- help: Consider changing this type to `u64`.
   |
   = help: `u32` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:55:29
   |
...
55 |     fn some_fn_2(a: u32, b: u16, c: u8, d: bool);
   |                             ^^^ `u16` is not trivially decodable.
   |                             --- help: Consider changing this type to `u64`.
   |
   = help: `u16` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:55:44
   |
...
55 |     fn some_fn_2(a: u32, b: u16, c: u8, d: bool);
   |                                            ^^^^ `bool` is not trivially decodable.
   |                                            ---- help: Consider changing this type to `TrivialBool`.
   |
   = help: `bool` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:61:21
   |
...
61 |     fn some_fn_4(a: (u64, bool));
   |                     ^^^^^^^^^^^ `(u64, bool)` is not trivially decodable.
   |                           ---- help: Consider changing this type to `TrivialBool`.
   |
   = help: `bool` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

error: Type is not trivially decodable
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/attributes/attribute_require/src/main.sw:64:21
   |
...
64 |     fn some_fn_5(a: [bool; 1]);
   |                     ^^^^^^^^^ `[bool; 1]` is not trivially decodable.
   |                      ---- help: Consider changing this type to `TrivialBool`.
   |
   = help: `bool` is never trivially decodable.
   = help: For more info see: https://fuellabs.github.io/sway/v0.71.1/book/advanced/trivial_encoding.html
____

  Aborting due to 9 errors.
error: Failed to compile attribute_require
